[gd_scene load_steps=32 format=4 uid="uid://c3mhx0wv5stqs"]

[ext_resource type="Script" uid="uid://dlk5wd2afjmxw" path="res://scenes/elevator_scene/elevator_scene.gd" id="1_vjcem"]
[ext_resource type="Script" uid="uid://baosi3a5wl8b6" path="res://scenes/elevator_scene/elevator_cam.gd" id="2_mmofx"]
[ext_resource type="PackedScene" uid="uid://dt42sn63or30c" path="res://scenes/elevator_scene/ui/elevator_ui.tscn" id="5_6p32t"]
[ext_resource type="Script" uid="uid://cpinallk62oiy" path="res://objects/interactables/elevators/elevator.gd" id="6_gseco"]
[ext_resource type="Texture2D" uid="uid://b2hxebb448x04" path="res://models/props/facility_objects/transporters/mint_elevator/mint_elevator_LocomotiveSide5.png" id="7_ksrjc"]
[ext_resource type="Texture2D" uid="uid://64imno2syur0" path="res://models/props/facility_objects/transporters/mint_elevator/mint_elevator_CFOCeiling2.png" id="8_pr6bg"]
[ext_resource type="Texture2D" uid="uid://bnujcjend7bf4" path="res://models/props/facility_objects/transporters/mint_elevator/mint_elevator_CBWallVault.png" id="9_74pqk"]
[ext_resource type="Texture2D" uid="uid://dth1vbdluw0a7" path="res://models/props/facility_objects/transporters/mint_elevator/mint_elevator_CBSafe2.png" id="10_vroci"]

[sub_resource type="Environment" id="Environment_6gtde"]
background_energy_multiplier = 0.0
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_272fd"]
resource_name = "textures:textures1:ZONE04aT:textures:CashBotLocomotive__357fea4"
cull_mode = 2
albedo_texture = ExtResource("7_ksrjc")
roughness = 0.552786

[sub_resource type="ArrayMesh" id="ArrayMesh_s5asu"]
_surfaces = [{
"aabb": AABB(-230.184, -133.097, -432.421, 457.072, 180.431, 432.419),
"format": 34896613377,
"index_count": 144,
"index_data": PackedByteArray("AAACAAEAAAADAAIAAwAFAAQAAwAAAAUABgAEAAcABgADAAQAAwAIAAIAAwAGAAgABgAJAAgABgAKAAkACgAHAAsACgAGAAcADAALAA0ADAAKAAsACgAOAAkACgAMAA4ADwABABAADwAAAAEAAAARAAUAAAAPABEADwASABEADwATABIAEwAQABQAEwAPABAAFQAXABYAFQAYABcACAAZAAEACAAYABkAFwAUABoAFwAOABQAGQAbABoAGQAcABsAFQAbABwAFQAWABsADQAdAAwADQAeAB0ADAAfAA4ADAAdAB8AEwAgABIAEwAhACAAFAAhABMAFAAiACEADgAjABQADgAkACMAHwAkAA4AHwAlACQAFAAmACIAFAAjACYA"),
"name": "textures:textures1:ZONE04aT:textures:CashBotLocomotive__357fea4",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 39,
"vertex_data": PackedByteArray("Xe0AABGhAABd7QAAwhgAAL1/AADCGAAAvX8AABGhAAC9fwAA/v8AAF3tAAD+/wAAVxUAABGhAABXFQAA/v8AAFcVAADCGAAAVxWffsIYAABXFZ9+EaEAAFcVn37//wAAVxX+/xGhAABXFf///v8AAFcV///CGAAAXe2ffhGhAABd7Z9+whgAAF3tn37//wAAXe3///7/AABd7f7/EaEAAF3t///CGAAAhyh6KsIYAACHKIrTwhgAAFcVitPCGAAAVxV6KsIYAABd7XoqwhgAAF3titPCGAAAa92K08IYAABr3XoqwhgAAAAA/v8RoQAAAAD///7/AAAAAP//whgAAP/////+/wAA///+/xGhAAD/////whgAAF3t//8AAAAAVxX//wAAAAAAAP//AAAAAP////8AAAAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_gla8d"]
resource_name = "mint_elevator_Mesh_002"
_surfaces = [{
"aabb": AABB(-230.184, -133.097, -432.421, 457.072, 180.431, 432.419),
"attribute_data": PackedByteArray("I4CQ/v2gkP7idhmmI4D/f/2g/3//f/9//aD/f/9/kP79oJD+/3//f/2g/38jgP9//aD/f/9/kP4jgJD+/3//fyOA/396MRmm/3//fyOA/3/AkP9/wJCQ/sCQ/39qrN3Qaqzd0COAkP5qrP//I4D/f3oxEafkkkz/aqz3jCOA/3/AkJD+wJD/f8CQ/38Xqf//I4D/fxep3dAjgJD+4nYRp+SSQIAXqfeMI4D/f/9/jf8qIc28/3//fyohEUJ6MWOxAAARQnoxPJwAAM284nY8nCohzbzidmOxKiERQiqh/38AABFCKqGN/wAAzbwXqd3QF6n//xep94wXqd3Qaqz//2qs3dBqrN3Qaqz3jE+PQIBPj0z/aqyhgBepoYAXqaGAaqyhgA=="),
"format": 34896613399,
"index_count": 144,
"index_data": PackedByteArray("AQAFAAQAAQAHAAUABwAMAAkABwABAAwADQAKAA8ADQAIAAoACAASAAYACAANABIADgAUABMADgAVABQAFQAQABYAFQAOABAAGQAWABsAGQAVABYAFQAfABQAFQAZAB8AIAADACEAIAAAAAMAAAAiAAsAAAAgACIAIAAkACIAIAAmACQAJgAhACoAJgAgACEALAAwAC4ALAAyADAAEQAzAAIAEQAxADMALwAnADUALwAcACcANAA4ADYANAA6ADgAKwA3ADkAKwAtADcAGgA7ABgAGgA8ADsAFwA9AB4AFwA+AD0AJQA/ACMAJQBAAD8AKQBBACUAKQBCAEEAHQBDACgAHQBEAEMAPQBFAB4APQBGAEUAKQBIAEIAKQBHAEgA"),
"material": SubResource("StandardMaterial3D_272fd"),
"name": "textures:textures1:ZONE04aT:textures:CashBotLocomotive__357fea4",
"primitive": 3,
"uv_scale": Vector4(7.71851, 2.00695, 0, 0),
"vertex_count": 73,
"vertex_data": PackedByteArray("Xe0AABGhAjpd7QAAEaECOl3tAADCGACAXe0AAMIY/MVd7QAAwhj8xb1/AADCGP+/vX8AAMIY/7+9fwAAEaH/P71/AAARof+/vX8AAP7//z+9fwAA/v//P13tAAD+/wI6Xe0AAP7/AjpXFQAAEaH8xVcVAAARoarpVxUAAP7/AjpXFQAA/v+q6VcVAADCGACAVxUAAMIY/MVXFQAAwhhUFlcVn37CGFTVVxWffhGhVNVXFZ9+//+qKlcV/v8Rof+/VxX+/xGh/79XFf7/EaH8xVcV///+//+/VxX///7/AjpXFf//whj/n1cV///CGFTVVxX//8IY/79XFf//whgmwl3tn34RoaoqXe2ffsIYqipd7Z9+//9U1V3t///+//+/Xe3///7/quld7f7/EaH/v13t/v8RoVQWXe3//8IY/59d7f//whhU1V3t///CGP+/Xe3//8IYTA2HKHoqwhgAgIcoeirCGACAhyiK08IYAICHKIrTwhgAgFcVitPCGACAVxWK08IYAIBXFXoqwhgAgFcVeirCGACAXe16KsIYAIBd7XoqwhgAgF3titPCGACAXe2K08IYAIBr3YrTwhgAgGvditPCGACAa916KsIYAIBr3XoqwhgAgAAA/v8Rof+/AAD///7//78AAP//whj/vwAA/v8Rof+///////7//7////7/EaH/v////v8Rof+//////8IY/79d7f//AABU1VcV//8AAFTVVxX//wAA/78AAP//AAD/v13t//8AAP+//////wAA/7//4v25/+L9uf9/////4v25/+L9uf///3////9/////f////3////9/////f//i/bn/4v25AMYAYwQ19hUAxgBjBDX2Ff9///8AxgBjBDX2FamqVFWqqlRVqqpVVf///3////9/AMYAY////38AxgBj////f6qqqqr///9/8dZ4a1RVqqpUVamqVVWqqv///38JagS1////fwlqBLX///9/qqqqqv///398cj25/3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3///////3////9/////f////3////9/////f////3////9/qqqqqqqqqqr///9/////f////3////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_s5asu")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_5mnuj"]
data = PackedVector3Array(193.619, -133.097, -160.354, -2.1121, -133.097, -390.601, 193.619, -133.097, -390.601, 193.619, -133.097, -160.354, -2.1121, -133.097, -160.354, -2.1121, -133.097, -390.601, -2.1121, -133.097, -160.354, 193.619, -133.097, -0.0091, -2.1121, -133.097, -0.0091, -2.1121, -133.097, -160.354, 193.619, -133.097, -160.354, 193.619, -133.097, -0.0091, -192.082, -133.097, -160.354, -2.1121, -133.097, -0.0091, -192.082, -133.097, -0.0091, -192.082, -133.097, -160.354, -2.1121, -133.097, -160.354, -2.1121, -133.097, -0.0091, -2.1121, -133.097, -160.354, -192.082, -133.097, -390.601, -2.1121, -133.097, -390.601, -2.1121, -133.097, -160.354, -192.082, -133.097, -160.354, -192.082, -133.097, -390.601, -192.082, -133.097, -160.354, -192.082, -43.8518, -390.601, -192.082, -133.097, -390.601, -192.082, -133.097, -160.354, -192.082, -43.8518, -160.354, -192.082, -43.8518, -390.601, -192.082, -43.8518, -160.354, -192.082, -133.097, -0.0091, -192.082, -43.8518, -0.0025, -192.082, -43.8518, -160.354, -192.082, -133.097, -160.354, -192.082, -133.097, -0.0091, -192.082, 47.3315, -160.354, -192.082, -43.8518, -0.0025, -192.082, 47.3343, -0.0091, -192.082, 47.3315, -160.354, -192.082, -43.8518, -160.354, -192.082, -43.8518, -0.0025, -192.082, -43.8518, -160.354, -192.082, 47.3343, -390.601, -192.082, -43.8518, -390.601, -192.082, -43.8518, -160.354, -192.082, 47.3315, -160.354, -192.082, 47.3343, -390.601, 193.619, -43.8518, -160.354, 193.619, -133.097, -390.601, 193.619, -43.8518, -390.601, 193.619, -43.8518, -160.354, 193.619, -133.097, -160.354, 193.619, -133.097, -390.601, 193.619, -133.097, -160.354, 193.619, -43.8518, -0.0025, 193.619, -133.097, -0.0091, 193.619, -133.097, -160.354, 193.619, -43.8518, -160.354, 193.619, -43.8518, -0.0025, 193.619, -43.8518, -160.354, 193.619, 47.3343, -0.0091, 193.619, -43.8518, -0.0025, 193.619, -43.8518, -160.354, 193.619, 47.3315, -160.354, 193.619, 47.3343, -0.0091, 193.619, 47.3315, -160.354, 193.619, -43.8518, -390.601, 193.619, 47.3343, -390.601, 193.619, 47.3315, -160.354, 193.619, -43.8518, -160.354, 193.619, -43.8518, -390.601, -157.824, -103.159, -390.601, -192.082, 16.0001, -390.601, -157.824, 16.0001, -390.601, -157.824, -103.159, -390.601, -192.082, -103.159, -390.601, -192.082, 16.0001, -390.601, -192.082, -133.097, -390.601, 193.619, -103.159, -390.601, 193.619, -133.097, -390.601, -192.082, -133.097, -390.601, -192.082, -103.159, -390.601, 193.619, -103.159, -390.601, -192.082, 16.0001, -390.601, 193.619, 47.3343, -390.601, 193.619, 16.0001, -390.601, -192.082, 16.0001, -390.601, -192.082, 47.3343, -390.601, 193.619, 47.3343, -390.601, 193.619, -103.159, -390.601, 165.149, 16.0001, -390.601, 193.619, 16.0001, -390.601, 193.619, -103.159, -390.601, 165.149, -103.159, -390.601, 165.149, 16.0001, -390.601, -157.824, -103.159, -390.601, 165.149, 16.0001, -390.601, 165.149, -103.159, -390.601, -157.824, -103.159, -390.601, -157.824, 16.0001, -390.601, 165.149, 16.0001, -390.601, -192.082, 47.3343, -0.0091, -230.184, 47.3315, -160.354, -192.082, 47.3315, -160.354, -192.082, 47.3343, -0.0091, -230.184, 47.3343, -0.0091, -230.184, 47.3315, -160.354, -192.082, 47.3315, -160.354, -230.184, 47.3343, -390.601, -192.082, 47.3343, -390.601, -192.082, 47.3315, -160.354, -230.184, 47.3315, -160.354, -230.184, 47.3343, -390.601, 193.619, 47.3315, -160.354, 226.887, 47.3343, -0.0091, 193.619, 47.3343, -0.0091, 193.619, 47.3315, -160.354, 226.887, 47.3315, -160.354, 226.887, 47.3343, -0.0091, 193.619, 47.3343, -390.601, 226.887, 47.3315, -160.354, 193.619, 47.3315, -160.354, 193.619, 47.3343, -390.601, 226.887, 47.3343, -390.601, 226.887, 47.3315, -160.354, -192.082, 47.3343, -390.601, 193.619, 47.3343, -432.421, 193.619, 47.3343, -390.601, -192.082, 47.3343, -390.601, -192.082, 47.3343, -432.421, 193.619, 47.3343, -432.421, -230.184, 47.3343, -390.601, -192.082, 47.3343, -432.421, -192.082, 47.3343, -390.601, -230.184, 47.3343, -390.601, -230.184, 47.3343, -432.421, -192.082, 47.3343, -432.421, 193.619, 47.3343, -390.601, 226.887, 47.3343, -432.421, 226.887, 47.3343, -390.601, 193.619, 47.3343, -390.601, 193.619, 47.3343, -432.421, 226.887, 47.3343, -432.421)
backface_collision = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hscqw"]
resource_name = "textures:textures1:ZONE04aT:textures:MidVault_v2_s2:CFO_6e43cdd"
cull_mode = 2
albedo_texture = ExtResource("8_pr6bg")
roughness = 0.552786

[sub_resource type="ArrayMesh" id="ArrayMesh_yjhvp"]
_surfaces = [{
"aabb": AABB(-192.079, -133.097, -0.00256348, 386.029, 180.431, 4.8147e-05),
"format": 34896613377,
"index_count": 30,
"index_data": PackedByteArray("AAACAAEAAAADAAIAAgAEAAEAAgAFAAQABgAHAAUABgAIAAcACQAEAAoACQALAAQABgAAAAsABgADAAAA"),
"name": "textures:textures1:ZONE04aT:textures:MidVault_v2_s2:CFO_6e43cdd",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("MhmZ2dPKAADM5pnZ08oAAMzmeioAAAAAMhl6KgAAAAD//5nZ08oAAP//eioAAAAAAAB6KgAAAAD//wAAAAAAAAAAAAAAAAAAAAD//xrRAAD/////GtEAAAAAmdnTygAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_lgjsu"]
resource_name = "mint_elevator_Mesh_003"
_surfaces = [{
"aabb": AABB(-192.079, -133.097, -0.00256348, 386.029, 180.431, 4.8147e-05),
"attribute_data": PackedByteArray("wjr//yohEmEqof//AAASYSqhPYAAAFyewjo9gCohXJ4qIRJhTwBPEnohVxIqIVyepyGcsgAAXJ5PAE8SfACTsqchnLJ6IVcSfACTsgAAEmE="),
"format": 34896613399,
"index_count": 30,
"index_data": PackedByteArray("AAAEAAIAAAAGAAQABQAIAAMABQALAAgADAAOAAoADAAPAA4AEAAJABEAEAASAAkADQABABMADQAHAAEA"),
"material": SubResource("StandardMaterial3D_hscqw"),
"name": "textures:textures1:ZONE04aT:textures:MidVault_v2_s2:CFO_6e43cdd",
"primitive": 3,
"uv_scale": Vector4(7.71851, 4.01886, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("MhmZ2dPK//8yGZnZ08oAAMzmmdnTyv//zOaZ2dPKAADM5noqAAD//8zmeioAAAAAMhl6KgAA//8yGXoqAAAAAP//mdnTygAA//+Z2dPK/////3oqAAD/////eioAAAAAAAB6KgAA//8AAHoqAAAAAP//AAAAAP//AAAAAAAA//8AAP//GtH///////8a0f//AACZ2dPK//8AAJnZ08oAAP///3////9/////f////3////9/////f////3////9/////fxfA5r8VwOm/////fxXA6b////9/FcDpvxXA6b8XwOa/F8DmvxfA5r////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_yjhvp")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_sfnsr"]
data = PackedVector3Array(-154.086, 20.2703, -0.0025, 155.951, -103.159, -0.0026, 155.951, 20.2703, -0.0025, -154.086, 20.2703, -0.0025, -154.086, -103.159, -0.0026, 155.951, -103.159, -0.0026, 155.951, -103.159, -0.0026, 193.95, 20.2703, -0.0025, 155.951, 20.2703, -0.0025, 155.951, -103.159, -0.0026, 193.95, -103.159, -0.0026, 193.95, 20.2703, -0.0025, -192.079, -103.159, -0.0026, 193.95, -133.097, -0.0026, 193.95, -103.159, -0.0026, -192.079, -103.159, -0.0026, -192.079, -133.097, -0.0026, 193.95, -133.097, -0.0026, -192.079, 47.3343, -0.0025, 193.95, 20.2703, -0.0025, 193.95, 47.3343, -0.0025, -192.079, 47.3343, -0.0025, -192.079, 20.2703, -0.0025, 193.95, 20.2703, -0.0025, -192.079, -103.159, -0.0026, -154.086, 20.2703, -0.0025, -192.079, 20.2703, -0.0025, -192.079, -103.159, -0.0026, -154.086, -103.159, -0.0026, -154.086, 20.2703, -0.0025)
backface_collision = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lrv4b"]
resource_name = "textures:textures1:textures:EndVault_v2_s3:CBWallVault_SHD1"
transparency = 4
cull_mode = 2
albedo_texture = ExtResource("9_74pqk")
roughness = 0.552786

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7ul66"]
resource_name = "textures:textures1:textures:CashBotFlatCarCargo3_v1_s1:_1395913"
cull_mode = 2
albedo_texture = ExtResource("10_vroci")
roughness = 0.552786

[sub_resource type="ArrayMesh" id="ArrayMesh_tc5f2"]
_surfaces = [{
"aabb": AABB(-372.555, -1.77092, -404.928, 193.512, 17.4528, 406.905),
"format": 34359742465,
"index_count": 36,
"index_data": PackedByteArray("CQABAAcACQAIAAEAAwABAAQABwADAAAAAQADAAcABAACAAUACAAEAAEAAgAEAAgACgAHAAAACgAJAAcABgAIAAkABgACAAgA"),
"name": "textures:textures1:textures:EndVault_v2_s3:CBWallVault_SHD1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 11,
"vertex_data": PackedByteArray("3gozw8boekG5dsrDAEe6w8boekG5dsrDAEe6w87oekGmIv0/3gozw2Ct4r+4dsrDAEe6w2Ct4r+4dsrDAEe6w2Ct4r8fIf0/IDWiw87oekGmIv0/Ckuiw8boekG4dsrD/0a6w8boekHK+rDDUkiiw8boekFgRLHD3gozw8boekFu0rHD")
}, {
"aabb": AABB(-324.565, -1.77092, -404.928, 145.523, 17.4528, 406.905),
"format": 34896613377,
"index_count": 15,
"index_data": PackedByteArray("AwABAAIABgADAAAAAQADAAYAAAAFAAYAAAAEAAUA"),
"name": "textures:textures1:textures:CashBotFlatCarCargo3_v1_s1:_1395913",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 7,
"vertex_data": PackedByteArray("/v/+////AAD+//7/AAAAAP7/AAAAAAAA/v8AAP7/AABDAP7///8AAAAA/v+0HwAA/v/+/wEfAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_d52kp"]
resource_name = "mint_elevator_Mesh_001"
_surfaces = [{
"aabb": AABB(-372.555, -1.77092, -404.928, 193.512, 17.4528, 406.905),
"attribute_data": PackedByteArray("AAAAAEBLNz0q2C8/QEs3PQAAgD9ASzc9bbMsPUBLNz0AAIA/QEs3PW2zLD0AAIA/AACAPwAAgD8AAAAAQEs3PQAAgD9ASzc9AACAP0BLNz0AAIA/AACAP49pTz4AAIA/C9ROPkBLNz26ikA/QEs3PWyzLD0gWSg+AACAPyBZKD6P5k4+VPcmPirYLz9cTCQ+"),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray("EAADAAwAEAAOAAMABwACAAgADQAHAAAAAgAHAA0ACQAGAAoADwAJAAQABgAJAA8AEQAMAAEAEQAQAAwACwAOABAACwAFAA4A"),
"material": SubResource("StandardMaterial3D_lrv4b"),
"name": "textures:textures1:textures:EndVault_v2_s3:CBWallVault_SHD1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 18,
"vertex_data": PackedByteArray("3gozw8boekG5dsrD3gozw8boekG5dsrDAEe6w8boekG5dsrDAEe6w8boekG5dsrDAEe6w8boekG5dsrDAEe6w87oekGmIv0/AEe6w87oekGmIv0/3gozw2Ct4r+4dsrDAEe6w2Ct4r+4dsrDAEe6w2Ct4r+4dsrDAEe6w2Ct4r8fIf0/IDWiw87oekGmIv0/Ckuiw8boekG4dsrDCkuiw8boekG4dsrD/0a6w8boekHK+rDD/0a6w8boekHK+rDDUkiiw8boekFgRLHD3gozw8boekFu0rHD/////////7//f///////v/////////+//3////7//78AAP9/////v/9///////+/AAD/f////7//////////v/////////+/AAD/f////78AAP9/////v/9///////+//7////7//7//v///////v/8//7//v//f/z//v////7//f////v//v/+//7//v/+f")
}, {
"aabb": AABB(-324.565, -1.77092, -404.928, 145.523, 17.4528, 406.905),
"attribute_data": PackedByteArray("Itmr5jtf//87Xxc1RHoXNUR6//+MgKvme4C6JjtftlIi2bom"),
"format": 34896613399,
"index_count": 15,
"index_data": PackedByteArray("BAACAAMABwAEAAEAAgAEAAcAAAAGAAgAAAAFAAYA"),
"material": SubResource("StandardMaterial3D_7ul66"),
"name": "textures:textures1:textures:CashBotFlatCarCargo3_v1_s1:_1395913",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 9,
"vertex_data": PackedByteArray("/v/+/////7/+//7///9U1f7//v8AAPfV/v8AAAAAVNX+/wAA/v9q1UMA/v////+/AAD+/7Qf/7/+//7/AR+N5P7//v8BH9TF4P/Bf6mqVFULqxhWqqpVVbeqb1X///9/of9Df065q5HuxZZi")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_tc5f2")

[sub_resource type="ArrayMesh" id="ArrayMesh_8vixd"]
_surfaces = [{
"aabb": AABB(178.755, -1.77092, -404.928, 192.812, 17.4528, 406.905),
"format": 34896613377,
"index_count": 27,
"index_data": PackedByteArray("CAACAAkACAAFAAIAAwACAAQACQADAAEAAgADAAkAAAAIAAYAAAAHAAgABgAJAAEABgAIAAkA"),
"name": "textures:textures1:textures:EndVault_v2_s3:CBWallVault_SHD1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 10,
"vertex_data": PackedByteArray("///+////AAD///7/AAAAAAAA/v8AAAAA//8AAAAAAAAAAAAAAAAAAAAA/v9qIAAA///+/1IgAADwv/7///8AAOzA/v9YIAAAvcL+/wAAAAA=")
}, {
"aabb": AABB(178.755, -1.77092, -404.928, 145.306, 17.4528, 406.905),
"format": 34359742465,
"index_count": 15,
"index_data": PackedByteArray("AgABAAMAAQAAAAQAAQACAAAABQAEAAYABQABAAQA"),
"name": "textures:textures1:textures:CashBotFlatCarCargo3_v1_s1:_1395913",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 7,
"vertex_data": PackedByteArray("Z8EyQ8boekG5dsrDZ8EyQ87oekGmIv0/Z8EyQ2Ct4r+4dsrDZ8EyQ2Ct4r8fIf0/Z8EyQ8roekGms7DDAamhQ87oekGmIv0/3weiQ8boekG1wbDD")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_be5ru"]
resource_name = "mint_elevator_Mesh"
_surfaces = [{
"aabb": AABB(178.755, -1.77092, -404.928, 192.812, 17.4528, 406.905),
"attribute_data": PackedByteArray("ywr//8sKdAvLCnQL1690C9evdAvLCnQL1690C9evayrLClUqFzT//3UzWipJMnQL"),
"format": 34896613399,
"index_count": 27,
"index_data": PackedByteArray("CgAEAAsACgAHAAQABQADAAYACwAFAAEAAwAFAAsAAAAKAAgAAAAJAAoACAALAAIACAAKAAsA"),
"material": SubResource("StandardMaterial3D_lrv4b"),
"name": "textures:textures1:textures:EndVault_v2_s3:CBWallVault_SHD1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("///+////AAD///7/AAD//////v8AAAAAAAD+/wAA//8AAP7/AAAAAP//AAAAAP//AAAAAAAA//8AAP7/aiBUFv///v9SIAAA8L/+////AADswP7/WCAAAL3C/v8AAAAA/3//v////3//f/+/////f/9//7////9/////fwlqBLX/f/+//3//v/9//7//f4Ha")
}, {
"aabb": AABB(178.755, -1.77092, -404.928, 145.306, 17.4528, 406.905),
"attribute_data": PackedByteArray("YeFSP3BTFj7e/xU/RC5PPmHhUj8AAIA/RG01P3BTFj5EbTU/AACAP97/FT8cLGs/YeFSP+QXiT5cnG0+RC5PPsLAaz6eOms/"),
"format": 34359742487,
"index_count": 15,
"index_data": PackedByteArray("AwACAAQAAgAAAAYAAgADAAAABwAFAAgABwABAAUA"),
"material": SubResource("StandardMaterial3D_7ul66"),
"name": "textures:textures1:textures:CashBotFlatCarCargo3_v1_s1:_1395913",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 9,
"vertex_data": PackedByteArray("Z8EyQ8boekG5dsrDZ8EyQ87oekGmIv0/Z8EyQ87oekGmIv0/Z8EyQ2Ct4r+4dsrDZ8EyQ2Ct4r8fIf0/Z8EyQ8roekGms7DDZ8EyQ8roekGms7DDAamhQ87oekGmIv0/3weiQ8boekG1wbDDAAD/f/9/////f///AAD/vwAA/3//f/7/AAD/f/9///8AAP9//3/+//8//7//P/+f/z//v////7//f///AAD/v/9///8AAP+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_8vixd")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5bnpk"]
resource_name = "lambert1"
cull_mode = 2
roughness = 0.552786

[sub_resource type="ArrayMesh" id="ArrayMesh_swf5h"]
_surfaces = [{
"aabb": AABB(-192.337, 15.24, -374.238, 385.895, 9.53674e-06, 389.478),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray("AAADAAEAAAACAAMA"),
"name": "lambert1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAAAAP7/AAD//wAA/v8AAAAAAAAAAAAA//8AAAAAAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_oeydx"]
resource_name = "mint_elevator_Mesh_004"
_surfaces = [{
"aabb": AABB(-192.337, 15.24, -374.238, 385.895, 9.53674e-06, 389.478),
"attribute_data": PackedByteArray("AAD///////8AAAAA//8AAA=="),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray("AAADAAEAAAACAAMA"),
"material": SubResource("StandardMaterial3D_5bnpk"),
"name": "lambert1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAAAAP7//7///wAA/v//vwAAAAAAAP+///8AAAAA/7////9/////f////3////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_swf5h")

[sub_resource type="Animation" id="Animation_trk4b"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Elevators1/left_door:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Elevators1/right_door:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_lw53s"]
resource_name = "close"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Elevators1/left_door:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 180.229, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Elevators1/right_door:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -176.856, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}

[sub_resource type="Animation" id="Animation_hbroo"]
resource_name = "open"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Elevators1/left_door:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(180.229, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Elevators1/right_door:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-176.856, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wqteh"]
_data = {
&"RESET": SubResource("Animation_trk4b"),
&"close": SubResource("Animation_lw53s"),
&"open": SubResource("Animation_hbroo")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_njuld"]
size = Vector3(3.80225, 3.87613, 1.71704)

[node name="ElevatorScene" type="Node3D"]
script = ExtResource("1_vjcem")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6gtde")

[node name="ElevatorCam" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0.119, 1.6, -2.555)
current = true
script = ExtResource("2_mmofx")

[node name="ElevatorUI" parent="." instance=ExtResource("5_6p32t")]

[node name="Elevator" type="Node3D" parent="." node_paths=PackedStringArray("animator", "player_pos", "elevator_cam")]
script = ExtResource("6_gseco")
animator = NodePath("AnimationPlayer")
player_pos = NodePath("PlayerPosition")
elevator_cam = NodePath("ElevatorCam")

[node name="Elevators1" type="Node3D" parent="Elevator"]
transform = Transform3D(0.01, 0, 0, 0, 0, -0.01, 0, 0.01, 0, 0, 0, 0)

[node name="group2" type="Node3D" parent="Elevator/Elevators1"]

[node name="elevator" type="MeshInstance3D" parent="Elevator/Elevators1/group2"]
transform = Transform3D(1, 0, 0, 0, 2.5, 0, 0, 0, 1, 0, -47.391, 0)
mesh = SubResource("ArrayMesh_gla8d")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Elevator/Elevators1/group2/elevator"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Elevator/Elevators1/group2/elevator/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5mnuj")

[node name="ground" type="MeshInstance3D" parent="Elevator/Elevators1/group2"]
transform = Transform3D(1, 0, 0, 0, 2.5, 0, 0, 0, 1, 0, -47.391, 0)
mesh = SubResource("ArrayMesh_lgjsu")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Elevator/Elevators1/group2/ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Elevator/Elevators1/group2/ground/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_sfnsr")

[node name="left_door" type="MeshInstance3D" parent="Elevator/Elevators1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 53.8791, 0)
mesh = SubResource("ArrayMesh_d52kp")
skeleton = NodePath("")

[node name="right_door" type="MeshInstance3D" parent="Elevator/Elevators1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 53.8791, 0)
mesh = SubResource("ArrayMesh_be5ru")
skeleton = NodePath("")

[node name="collisions" type="Node3D" parent="Elevator"]
transform = Transform3D(0.01, 0, 0, 0, 0, -0.01, 0, 0.01, 0, 0, 0.161372, 0)

[node name="wall" type="MeshInstance3D" parent="Elevator/collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -15.2653, 0.829967)
visible = false
mesh = SubResource("ArrayMesh_oeydx")
skeleton = NodePath("")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Elevator"]
libraries = {
"": SubResource("AnimationLibrary_wqteh")
}

[node name="PlayerCollision" type="Area3D" parent="Elevator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.534974, -0.495661)
collision_mask = 2
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Elevator/PlayerCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0100098, 1.40426, -0.387085)
shape = SubResource("BoxShape3D_njuld")

[node name="PlayerPosition" type="Node3D" parent="Elevator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.976305)

[node name="ElevatorCam" type="Camera3D" parent="Elevator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.065, 2.851)

[node name="PlayerPosition" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 1.18067, 0, 0)

[node name="Outside" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.8229)

[connection signal="start_floor" from="ElevatorUI" to="." method="start_floor"]
[connection signal="body_entered" from="Elevator/PlayerCollision" to="Elevator" method="body_entered"]
